--- a/www/views/products/admin_edit.html
+++ b/www/views/products/admin_edit.html
@@ -41,11 +41,11 @@
     </div>
     <div class="form-group">
         <label>Состав: арабика, %</label>
-        <input class="form-control" type="text" name="sort" form="products_form"  value="<?=$data['product']['sort_arabica']?>">
+        <input class="form-control" type="text" name="sort_arabica" form="products_form"  value="<?=$data['product']['sort_arabica']?>">
     </div>
     <div class="form-group">
         <label>Состав: робуста, %</label>
-        <input class="form-control" type="text" name="sort" form="products_form"  value="<?=$data['product']['sort_robusta']?>">
+        <input class="form-control" type="text" name="sort_robusta" form="products_form"  value="<?=$data['product']['sort_robusta']?>">
     </div>
     <div class="form-group">
         <label>Обжарка</label>
