--- a/www/views/pages/index.html
+++ b/www/views/pages/index.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-12 sort-text">
     <span>
-        Выбор клиентов    &nbsp
+        Выбор клиентов    &nbsp&nbsp
         <a onclick="prod_format('grid_format')"><span id="gl-grid" class="glyphicon glyphicon-th" aria-hidden="true"></span></a>
         <a onclick="prod_format('list_format')"><span id="gl-list" class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
     </span>
