--- a/www/views/pages/index.html
+++ b/www/views/pages/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </div>
                 <div class="item-img">
-                    <a href="/products/item/<?=$page['id']?>" >
+                        <a href="/products/item/<?=$page['id']?>" >
                         <img src="<?=$page['img_path']?>" alt="<?=$page['name']?>">
                         </a>
                 </div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="item-price"><span><?=$page['price']?> </span>грн</div>
                 <div class="item-cart">
-                    <a><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
+                    <a id="add-<?=$page['id']?>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="item-price"><span><?=$page['price']?> </span>грн</div>
                     <div class="item-cart">
-                        <a><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
+                        <a id="add-<?=$page['id']?>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
                     </div>
                 </div>
             </div>
