--- a/www/views/default.html
+++ b/www/views/default.html
@@ -10,6 +10,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
     <script src="https://code.jquery.com/jquery.min.js"></script>
+
+
     <script src="/js/products_format.js"></script>
     <script src="/js/ajax.js"></script>
 
@@ -156,6 +158,9 @@
     <link rel="stylesheet" href="/js/subscribe_window/jquery.arcticmodal.css">
     <script src="/js/subscribe_window/config.js"></script>
     <script src="/js/subscribe_window/jquery.arcticmodal.js"></script>
+    <script>
+
+    </script>
 
 </body>
 </html>
