--- a/www/views/default.html
+++ b/www/views/default.html
@@ -35,7 +35,7 @@
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <ul class="top-phones">
                             <li>
                                 <span class="code">/050/</span>
@@ -47,7 +47,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-6">
                         <div class="search-block col-md-6">
                             <form action="/products/search" method="post">
                                 <input type="text" name="search" class="search" placeholder="Поиск">
@@ -58,8 +58,9 @@
                         </div>
                         <div class="cart-block col-md-6">
                             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> в корзине <br>
-                            <span><strong>0</strong></span> товаров на сумму
-                            <span><strong>0</strong></span> грн.
+                            <div id="cart_inticator">
+                                0 товаров на сумму 0грн.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,9 +170,8 @@
                 method: 'POST',
                 data: {'item_id': id}
                 }).done(function (data) {
-//                alert('Product '+ id + ' added')
-                alert(data)
-
+                    str=data;
+                    $('#cart_inticator').html(str);
             });
         });
     </script>
