--- a/www/views/default.html
+++ b/www/views/default.html
@@ -59,6 +59,7 @@
                         <div class="cart-block col-md-6">
                             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> в корзине <br>
                             <div id="cart_inticator">
+
                                 0 товаров на сумму 0грн.
                             </div>
                         </div>
@@ -175,6 +176,16 @@
             });
         });
     </script>
-
+    <script>
+        $(document).ready(function() {
+            $.ajax({
+                url: '/cart/addProduct/',
+                method: 'POST'
+            }).done(function (data) {
+                str=data;
+                $('#cart_inticator').html(str);
+            });
+        });
+    </script>
 </body>
 </html>
