--- a/www/views/default.html
+++ b/www/views/default.html
@@ -59,8 +59,7 @@
                         <div class="cart-block col-md-6">
                             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> в корзине <br>
                             <div id="cart_inticator">
-
-                                0 товаров на сумму 0грн.
+                                <!--0 товаров на сумму 0грн.-->
                             </div>
                         </div>
                     </div>
