--- a/www/views/products/search.html
+++ b/www/views/products/search.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="item-price"><span><?=$page['price']?> </span>грн</div>
                         <div class="item-cart">
-                            <a><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
+                            <a id="add-<?=$page['id']?>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> купить</a>
                         </div>
                     </div>
 
