--- a/www/views/default.html
+++ b/www/views/default.html
@@ -57,8 +57,12 @@
                             </form>
                         </div>
                         <div class="cart-block col-md-6">
-                            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> в корзине <br>
-                            <div id="cart_inticator">
+                            <div class="cart_main">
+                                <a href="/cart/show">
+                                    <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> в корзине <br>
+                                </a>
+                            </div>
+                                <div id="cart_inticator">
                                 <!--0 товаров на сумму 0грн.-->
                             </div>
                         </div>
