--- a/www/views/default.html
+++ b/www/views/default.html
@@ -169,7 +169,6 @@
             quantity = typeof($('#quantity').val())!= 'undefined' ? $('#quantity').val() : 1;
             id = $(this).attr('id').split('-');
             id = id[1];
-
             $.ajax({
                 url: '/cart/addProduct/' + id + '/' + quantity,
                 method: 'POST',
@@ -189,6 +188,22 @@
                 str=data;
                 $('#cart_inticator').html(str);
             });
+        });
+    </script>
+    <script>
+        $("input[id|='quantity']").on('change', function() {
+            alert("Haai");
+//            quantity = typeof($('#quantity').val())!= 'undefined' ? $('#quantity').val() : 1;
+//            id = $(this).attr('id').split('-');
+//            id = id[1];
+//            $.ajax({
+//                url: '/cart/addProduct/' + id + '/' + quantity,
+//                method: 'POST',
+//                data: {'id': id, 'quantity': quantity}
+//            }).done(function (data) {
+//                str=data;
+//                $('#cart_inticator').html(str);
+//            });
         });
     </script>
 </body>
