--- a/www/views/cart/show.html
+++ b/www/views/cart/show.html
@@ -24,7 +24,7 @@
                 <td><img src="<?=$item['img_path']?>" style="height: 40px"></td>
                 <td><?=$item["brand"]?><?=$item["name"]?> <?=$item["weight"]?></td>
                 <td><?=$item["price"]?></td>
-                <td><input type="number" step="1" min="1" max="100" id="quantity" name="quantity" value="<?=$item['quantity']?>"></td>
+                <td><input type="number" step="1" min="1" max="100" id="quantity-<?=$item['id']?>" name="quantity" value="<?=$item['quantity']?>"></td>
                 <td><?=($item["price"]*$item["quantity"])?></td>
                 <td><button class="btn btn-xs"><b>x</b></button></td>
             </tr>
